RT-31994: If stylesheet url is not null, convert to uri and use uri to resolve resource path. If stylesheet url is null (as is the case for in-line styles) fall back to application's class-loader's getResource. Code is similar to that in Image